syntax = "proto3";

// import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

option go_package = "./pb";

service EventService {
    rpc SendEvent(EventRequest) returns (EventResponse);
}

message EventRequest {
    repeated Event events = 1;
}

message Event {
  string name = 1;
  int64  eventTime = 2;
  repeated Entity entities = 3;
}

message Entity {
  string schema = 1;
  string version = 2;
  // google.protobuf.Struct parameters = 3;
  map<string, google.protobuf.Any> parameters = 3;
}

message EventResponse {
  string result = 1;
}
